2002-01-15 Holger Freyther <freyther@kde.org>
	* checkin the first klockfile
	* adds TODO